Implement credentials functions on the back-end

--- a/src/assets/i18n/credentials/account-confirmation/pl.json
+++ b/src/assets/i18n/credentials/account-confirmation/pl.json
@@ -7,7 +7,7 @@
   "accountConfirmedMfa": "Będziesz musiał ustawić dodatkowe środki bezpieczeństwa konta - MFA/2FA. Albo przy użyciu numeru telefonu komórkowego, albo aplikacji uwierzytelniających, takich jak",
   "accountConfirmedMfaOr": "lub",
   "clickToContinue": "Kliknij poniższy przycisk, aby kontynuować.",
-  "cześć tam": "Witam",
+  "helloThere": "Witam",
   "accountSecured": "Teraz twoje konto jest w pełni skonfigurowane i zabezpieczone. Możesz zaczynać!",
   "accountConfirmedMfaObligation": "Później będziesz mógł zmienić sposób dodatkowego zabezpieczenia na inny w ustawieniach swojego konta,",
   "accountConfirmedOneMfa": "ale przynajmniej jeden z nich musisz mieć.",
