transation of the pages and rewriting of articles and categories creation

--- a/src/assets/i18n/components/button/en.json
+++ b/src/assets/i18n/components/button/en.json
@@ -32,23 +32,23 @@
   "deleteRole": "Delete role",
   "seeMore": "See more",
   "sendContactMessage": "Send a contact message",
-  "postProduct": "Post product",
-  "editProduct": "Edit product",
-  "deleteProduct": "Delete product",
   "clearFilters": "Clear filters",
   "goToMarketplace": "Marketplace",
   "dashboardMainPage": "Main page",
   "dashboardRedirect": "Dashboard",
-  "postProductRedirect": "Post product",
   "settingsRedirect": "Account settings",
   "showFilters": "Show filters",
   "createAccForMyself": "I want to create an account for myself",
   "createAccForCompany": "I want to create an account for my company",
-  "dashboardFavorites": "Favorite products",
   "showContactEmail": "Show contact email",
   "showContactPhone": "Show contact phone",
   "logInCreateAcc": "Log In / Create account",
   "companySettings": "Company settings",
   "goToUserProfile": "Go to user profile",
-  "companyProduct": "Company products"
+  "yourArticles": "Your articles",
+  "selectPhoto": "Select photo",
+  "createArticle": "Create article",
+  "createCategory": "Create category",
+  "editCategory": "Edit category",
+  "deleteCategory": "Delete category"
 }
