--- a/src/assets/i18n/components/button/ru.json
+++ b/src/assets/i18n/components/button/ru.json
@@ -32,23 +32,23 @@
   "deleteRole": "Удалить роль",
   "seeMore": "Смотрите больше",
   "sendContactMessage": "Отправить контактное сообщение",
-  "postProduct": "Опубликовать продукт",
-  "editProduct": "Модифицировать продукт",
-  "deleteProduct": "Удалить продукт",
   "clearFilters": "Очистить фильтры",
   "goToMarketplace": "Маркетплейс",
   "dashboardMainPage": "Главная",
   "dashboardRedirect": "Дашборд",
-  "postProductRedirect": "Опубликовать продукт",
   "settingsRedirect": "Настройки аккаунта",
   "showFilters": "Показать фильтры",
   "createAccForMyself": "Я хочу создать учетную запись для себя",
   "createAccForCompany": "Я хочу создать учетную запись для моей компании",
-  "dashboardFavorites": "Избранные продукты",
   "showContactEmail": "Показать контактный адрес электронной почты",
   "showContactPhone": "Показать контактный телефон",
   "logInCreateAcc": "Войти / Создать аккаунт",
   "companySettings": "Настройки компании",
   "goToUserProfile": "Профиль пользователя",
-  "companyProduct": "Продукты компании"
+  "yourArticles": "Ваши статьи",
+  "selectPhoto": "Выбрать фото",
+  "createArticle": "Создать статью",
+  "createCategory": "Создать категорию",
+  "editCategory": "Изменить категорию",
+  "deleteCategory": "Удалить категорию"
 }
