--- a/src/assets/i18n/components/input/en.json
+++ b/src/assets/i18n/components/input/en.json
@@ -46,18 +46,6 @@
   "phoneInputDescription": "Make sure you provided phone number with country code. Once you have got a message on your phone, provide the 6-digit code into the input field below.",
   "resetPassInputDesc": "Confirmation link will be sent to provided email address, if the account with this email address exists. Link will be valid for 24h, make sure you will reset password in this period of time.",
   "fieldRequired": "Field is required in order to continue",
-  "companyLocation": "Company location",
-  "provideCompanyLocation": "Provide company location",
-  "companyLocationDesc": "Provide the physical (if possible) address of the company. Otherwise, provide the address where company is registered.",
-  "locationError": "Min length of the location is 8 symbols, max is 128 symbols.",
-  "companyName": "Company name",
-  "provideCompanyName": "Provide company name",
-  "companyDesc": "Provide the full and valid official name of the company",
-  "companyError": "Min length of the company name is 2 symbols, max is 64 symbols.",
-  "companyWebsite": "Company website",
-  "provideCompanyWebsite": "Provide company website",
-  "websiteDesc": "Should be FQDN. Provide the URL of the website that is associated with the company.",
-  "wrongFQDN": "Wrong fully qualified domain name (URL)",
   "emailChangeInfo": "Email can be changed from the security settings. Be careful! You are allowed to change the email only one time.",
   "mfaToken": "MFA Token",
   "copied": "Message has been successfully copied to the clipboard",
@@ -72,101 +60,27 @@
   "accDeletionFullName": "In order to delete an account provide your full name (first name and last name).",
   "goToPageLabel": "Go to page",
   "pagePlaceholder": "Page",
-  "newCompanyOwnerEmailLabel": "Company new owner email",
-  "newCompanyOwnerEmailPlaceholder": "Provide the company new owner email address",
-  "newCompanyOwnerEmailDesc": "In order to continue, please, make sure that the provided email is the company member with confirmed account",
-  "companyMemberFirstName": "Company member first name",
-  "companyMemberLastName": "Company member last name",
-  "companyMemberNamePronunciation": "Company member name pronunciation",
-  "companyMemberHomeAddress": "Company member home address",
-  "companyMemberHomePhone": "Company member home phone",
-  "companyMemberEmailModifyDesc": "You cannot modify the email address of the user. This action must be performed by the user themself.",
-  "provideCompanyMemberFirstName": "Provide company member first name",
-  "provideCompanyMemberLastName": "Provide company member last name",
-  "provideCompanyMemberNamePronunciation": "Provide company member name pronunciation (for instance, Zoe ('zo-ee'))",
-  "provideCompanyMemberHomeAddress": "Provide company member home address",
-  "provideCompanyMemberHomePhone": "Provide company member home phone",
-  "companyMemberNamePronunciationDesc": "Field is optional. This could be a phonetic pronunciation, or an example of something the name sounds like.",
-  "companyMemberHomeAddressDesc": "Field is optional. You may provide here your home address where the company member is currently located.",
-  "companyMemberHomePhoneDesc": "Field is optional. You may provide company member home phone number.",
-  "newRoleName": "New role name",
-  "provideNewRoleName": "Provide the name of the new role",
-  "provideNewRoleNameDesc": "Provide the name of the role that will be displayed on the screen.",
-  "newRoleNameError": "Min length of the new role name is 2 symbols, max is 64 symbols.",
-  "newRoleDescription": "New role description",
-  "provideNewRoleDescription": "Provide the description of the new role",
-  "provideNewRoleDescriptionDesc": "The description of the role is needed for you in order to know for what this role is created and who should be assignee.",
-  "newRoleDescriptionError": "Min length of the new role description is 2 symbols, max is 128 symbols.",
-  "roleName": "Role name",
-  "provideRoleName": "Provide the role name",
-  "provideRoleNameDesc": "Provide the name of the role that will be displayed on the screen.",
-  "roleNameError": "Min length of the new role name is 2 symbols, max is 64 symbols.",
-  "roleDescription": "Role description",
-  "provideRoleDescription": "Provide the role description",
-  "provideRoleDescriptionDesc": "The description of the role is needed for you in order to know for what this role is created and who should be assignee.",
-  "roleDescriptionError": "Min length of the new role description is 2 symbols, max is 128 symbols.",
-  "newRoleAssignee": "New role assignee",
-  "provideNewRoleAssignee": "Provide assignee for the new role",
-  "newRoleAssigneeDesc": "In order to create new role, you need to assignee it to at least one user in your company.",
-  "contactEmail": "Your contact email",
-  "provideContactEmail": "Provide your contact email",
-  "contactEmailDesc": "Provide the email that we can use in order to reach out back to you",
-  "contactMessage": "Your contact message",
-  "provideContactMessage": "Provide your contact message",
-  "contactMessageDesc": "Write whatever you want. We will be glad to talk!",
-  "wrongContactMessage": "Wrong contact message length. Should be between 2 and 1024.",
-  "productLabel": "Product title",
-  "productPlaceholder": "For example: New Fancy Ford Mustang",
-  "productInputDesc": "This is going to be the main title of the product that everyone is going to see.",
-  "productError": "The length of the title should be between 16 and 70.",
-  "productDescriptionTitle": "Product description",
-  "productDescriptionPlaceholder": "Write here a couple of words of important information that would be useful for someone who is going to purchase your product.",
-  "productDescriptionInputDesc": "Should be at least 40 characters.",
-  "productDescriptionError": "The length of the product description should be between 40 and 9000 characters.",
-  "contactPersonLabel": "Contact person",
-  "contactPersonPlaceholder": "Provide the name of the contact person",
-  "contactPersonInputDesc": "In case if you are contacted about product you are offering, let people know how they can talk to you.",
-  "contactPersonError": "The length of the name of the contact person should be between 1 and 64.",
-  "productContactEmailInputDesc": "Your email address may be used to contact you.",
-  "productPhonePlaceholder": "Product owner contact phone number",
-  "productPhoneInputDesc": "Your contact phone number might be required for the potential customer to contact you.",
-  "productPhoneError": "Wrong phone number format",
-  "productPriceLabel": "Product price",
-  "productPricePlaceholder": "Provide the price of the product",
-  "productPriceInputDesc": "This is going to be what amount of money you want for your product. Don't forget to select the proper currency!",
-  "productPriceError": "The price cannot be a negative number",
-  "productLocationLabel": "Product location",
-  "productLocationPlaceholder": "Provide the location of the product",
-  "productLocationInputDesc": "Provide the location of the product or the service that you are going to post.",
-  "productLocationError": "The length of the product location should be between 4 and 64",
-  "searchForYourProductsLabel": "Search for your products",
-  "searchForProductsPlaceholder": "Provide any data about your product in order to find it",
-  "searchForProductsInputDesc": "You can perform the search of your products based on title, description or slug.",
-  "priceFromLabel": "Price from",
-  "priceFromPlaceholder": "The minimal price",
-  "priceFromInputDesc": "The minimal price in the range of searched products.",
-  "priceFromError": "Wrong minimal price! Make sure it is not a negative number.",
-  "priceToLabel": "Price to",
-  "priceToPlaceholder": "The maximum price",
-  "priceToInputDesc": "The maximum price in the range of searched products.",
-  "priceToError": "Wrong maximum price! Make sure it is not a negative number.",
-  "marketplaceSearchLabel": "Search for whatever goods you want",
-  "marketplaceSearchPlaceholder": "Provide the query for the product",
-  "marketplaceSearchInputDesc": "The search of the product will be based on the name, category, subcategory, description, title and slug.",
-  "searchTitle": "Search",
-  "searchForProductsHeader": "Search for products...",
-  "favoriteProductsSearchLabel": "Favorites products search",
-  "favoriteProductsSearchPlaceholder": "Favorites products search",
-  "favoriteProductsSearchInputDesc": "You can perform the search of your products based on title, description or slug.",
-  "clickToCopy": "Click on the input field in order to copy.",
-  "companyMemberSearchEmailLabel": "Company member email",
-  "companyMemberSearchEmailPlaceholder": "Search for members of your company",
-  "noHomeAddress": "No home address specified",
-  "noHomePhone": "No home phone specified",
-  "companyMemberSearchLabel": "Company member search",
-  "companyMemberSearchPlaceholder": "Search for company member",
-  "companyMemberSearchInputDesc": "Search for company members using first and last name",
-  "companyEmployeeLabel": "Company employee",
-  "companyEmployeePlaceholder": "Search company employee",
-  "companyEmployeeInputDesc": "Search company employee based on email, first name or last name"
+  "articleQueryLabel": "Article query",
+  "articleQueryPlaceholder": "Provide article query to search for",
+  "articleQueryDesc": "The articles will be found based on their names, description and slugs",
+  "articleNameLabel": "Article name",
+  "articleNamePlaceholder": "Provide the name of the article",
+  "articleNameDesc": "The name of the article will be the main title seen by users, also, this name will be used in slug",
+  "articleDescLabel": "Article description",
+  "articleDescPlaceholder": "Provide the description of the article",
+  "articleDescDesc": "The description is going to be used as a short introduction to the article",
+  "articleTagsLabel": "Article tags",
+  "articleTagsPlaceholder": "Provide the tags of the article",
+  "articleTagsDesc": "Use space bar in order to push the tag to the list of article tags",
+  "htmlEditorPlaceholder": "Create...",
+  "categoryNameLabel": "Category name",
+  "categoryNamePlaceholder": "Provide the name of the new category",
+  "categoryNameDesc": "The name of the category will be assigned to articles and visible for all end users",
+  "categoryDescLabel": "Category description",
+  "categoryDescPlaceholder": "Provide the description of the new category",
+  "categoryDescDesc": "The category description is used only internally and will only be visible for internal users",
+  "editCategoryNameLabel": "Edit category name",
+  "editCategoryNamePlaceholder": "Provide new name for the category",
+  "editCategoryDescLabel": "Edit category description",
+  "editCategoryDescPlaceholder": "Provide new description for the category"
 }
