--- a/src/assets/i18n/components/input/pl.json
+++ b/src/assets/i18n/components/input/pl.json
@@ -46,18 +46,6 @@
   "phoneInputDescription": "Upewnij się, że podałeś numer telefonu z numerem kierunkowym kraju. Po odebraniu wiadomości na telefonie wprowadź 6-cyfrowy kod w poniższym polu wprowadzania.",
   "resetPassInputDesc": "Link potwierdzający zostanie wysłany na podany adres e-mail, jeśli istnieje konto z tym adresem e-mail. Link będzie ważny przez 24 godziny, upewnij się, że w tym czasie zresetujesz hasło.",
   "fieldRequired": "Pole jest wymagane aby kontynuować",
-  "companyLocation": "Lokalizacja firmy",
-  "provideCompanyLocation": "Podaj lokalizację firmy",
-  "companyLocationDesc": "Podaj fizyczny (jeśli to możliwe) adres firmy. W przeciwnym razie podaj adres, pod którym firma jest zarejestrowana.",
-  "locationError": "Minimalna długość lokalizacji to 8 znaków, maksymalna to 128 znaków.",
-  "companyName": "Nazwa firmy",
-  "provideCompanyName": "Podaj nazwę firmy",
-  "companyDesc": "Podaj pełną i prawidłową oficjalną nazwę firmy",
-  "companyError": "Minimalna długość nazwy firmy to 2 znaki, maksymalna to 64 znaki.",
-  "companyWebsite": "Strona internetowa firmy",
-  "provideCompanyWebsite": "Podaj stronę internetową firmy",
-  "websiteDesc": "Powinien być FQDN. Podaj adres URL strony internetowej, która jest powiązana z firmą.",
-  "wrongFQDN": "Niewłaściwa w pełni kwalifikowana nazwa domeny (URL)",
   "emailChangeInfo": "Adres e-mail można zmienić w ustawieniach zabezpieczeń. Uważaj! Możesz zmienić e-mail tylko raz.",
   "mfaToken": "Token MFA",
   "copied": "Wiadomość została pomyślnie skopiowana do schowka",
@@ -72,101 +60,27 @@
   "accDeletionFullName": "Aby usunąć konto, podaj swoje pełne imię i nazwisko (imię i nazwisko).",
   "goToPageLabel": "Przejdź do strony",
   "pagePlaceholder": "Strona",
-  "newCompanyOwnerEmailLabel": "E-mail nowego właściciela firmy",
-  "newCompanyOwnerEmailPlaceholder": "Podaj adres e-mail nowego właściciela firmy",
-  "newCompanyOwnerEmailDesc": "Aby kontynuować, upewnij się, że podany adres e-mail należy do członka firmy z potwierdzonym kontem",
-  "companyMemberFirstName": "Imię członka firmy",
-  "companyMemberLastName": "Nazwisko członka firmy",
-  "companyMemberNamePronunciation": "Wymowa nazwy członka firmy",
-  "companyMemberHomeAddress": "Adres domowy członka firmy",
-  "companyMemberHomePhone": "Telefon członka firmy",
-  "companyMemberEmailModifyDesc": "Nie możesz modyfikować adresu e-mail użytkownika. Tę czynność musi wykonać sam użytkownik.",
-  "provideCompanyMemberFirstName": "Podaj imię członka firmy",
-  "provideCompanyMemberLastName": "Podaj nazwisko członka firmy",
-  "provideCompanyMemberNamePronunciation": "Podaj wymowę nazwy członka firmy (np. Zoe ('zo-ee'))",
-  "provideCompanyMemberHomeAddress": "Podaj adres domowy członka firmy",
-  "provideCompanyMemberHomePhone": "Podaj telefon domowy członkowi firmy",
-  "companyMemberNamePronunciationDesc": "Pole jest opcjonalne. Może to być wymowa fonetyczna lub przykład czegoś, jak brzmi nazwa.",
-  "companyMemberHomeAddressDesc": "Pole jest opcjonalne. Możesz tutaj podać swój adres domowy, pod którym aktualnie przebywa członek firmy.",
-  "companyMemberHomePhoneDesc": "Pole jest opcjonalne. Możesz podać domowy numer telefonu członka firmy.",
-  "newRoleName": "Nowa nazwa roli",
-  "provideNewRoleName": "Podaj nazwę nowej roli",
-  "provideNewRoleNameDesc": "Podaj nazwę roli, która będzie wyświetlana na ekranie.",
-  "newRoleNameError": "Minimalna długość nowej nazwy roli to 2 symbole, maksymalna to 64 symbole.",
-  "newRoleDescription": "Nowy opis roli",
-  "provideNewRoleDescription": "Podaj opis nowej roli",
-  "provideNewRoleDescriptionDesc": "Opis roli jest Ci potrzebny, abyś wiedział, po co ta rola jest tworzona i kto powinien być przypisany.",
-  "newRoleDescriptionError": "Minimalna długość opisu nowej roli to 2 symbole, maksymalna to 128 symboli.",
-  "roleName": "Nazwa roli",
-  "provideRoleName": "Podaj nazwę roli",
-  "provideRoleNameDesc": "Podaj nazwę roli, która będzie wyświetlana na ekranie.",
-  "roleNameError": "Minimalna długość nowej nazwy roli to 2 symbole, maksymalna to 64 symbole.",
-  "roleDescription": "Opis roli",
-  "provideRoleDescription": "Podaj opis roli",
-  "provideRoleDescriptionDesc": "Opis roli jest Ci potrzebny, abyś wiedział, do czego ta rola jest tworzona i kto powinien być jej przypisany.",
-  "roleDescriptionError": "Minimalna długość nowego opisu roli to 2 symbole, maksymalna to 128 symboli.",
-  "newRoleAssignee": "Nowa osoba przypisana roli",
-  "provideNewRoleAssignee": "Podaj osobę przypisaną do nowej roli",
-  "newRoleAssigneeDesc": "Aby utworzyć nową rolę, musisz przypisać ją przynajmniej jednemu użytkownikowi w Twojej firmie.",
-  "contactEmail": "Twój kontaktowy e-mail",
-  "provideContactEmail": "podaj swój kontaktowy adres e-mail",
-  "contactEmailDesc": "podaj wiadomość e-mail, której możemy użyć, aby skontaktować się z Tobą",
-  "contactMessage": "Twoja wiadomość kontaktowa",
-  "provideContactMessage": "Podaj swoją wiadomość kontaktową",
-  "contactMessageDesc": "pisz, co chcesz. Z przyjemnością porozmawiamy!",
-  "wrongContactMessage": "Niewłaściwa długość wiadomości kontaktowej. Powinien wynosić od 2 do 1024.",
-  "productLabel": "Tytuł produktu",
-  "productPlaceholder": "Na przykład: Nowy fantazyjny Ford Mustang",
-  "productInputDesc": "To będzie główny tytuł produktu, który wszyscy zobaczą.",
-  "productError": "Długość tytułu powinna wynosić od 16 do 70.",
-  "productDescriptionTitle": "Opis produktu",
-  "productDescriptionPlaceholder": "Napisz tutaj kilka słów ważnych informacji, które byłyby przydatne dla kogoś, kto zamierza kupić twój produkt.",
-  "productDescriptionInputDesc": "Powinien mieć co najmniej 40 znaków.",
-  "productDescriptionError": "Długość opisu produktu powinna wynosić od 40 do 9000 znaków.",
-  "contactPersonLabel": "Osoba kontaktowa",
-  "contactPersonPlaceholder": "podaj nazwisko osoby kontaktowej",
-  "contactPersonInputDesc": "jeśli skontaktujesz się z Tobą w sprawie oferowanego produktu, poinformuj ludzi, jak mogą z tobą porozmawiać.",
-  "contactPersonError": "długość nazwiska osoby kontaktowej powinna wynosić od 1 do 64.",
-  "productContactEmailInputDesc": "Twój adres e-mail może być użyty do skontaktowania się z Tobą.",
-  "productPhonePlaceholder": "numer telefonu kontaktowego Właściciela Produktu",
-  "productPhoneInputDesc": "Twój numer telefonu kontaktowego może być wymagany, aby potencjalny klient mógł się z Tobą skontaktować.",
-  "productPhoneError":"Niewłaściwy format numeru telefonu",
-  "productPriceLabel": "Cena produktu",
-  "productPricePlaceholder": "Podaj cenę produktu",
-  "productPriceInputDesc": "To będzie kwota, jaką chcesz za swój produkt. Nie zapomnij wybrać odpowiedniej waluty!",
-  "productPriceError": "Cena nie może być liczbą ujemną",
-  "productLocationLabel": "Lokalizacja produktu",
-  "productLocationPlaceholder": "Podaj lokalizację produktu",
-  "productLocationInputDesc": "Podaj lokalizację produktu lub usługi, którą zamierzasz opublikować.",
-  "productLocationError": "Długość lokalizacji produktu powinna wynosić od 4 do 64",
-  "searchForYourProductsLabel": "Wyszukaj swoje produkty",
-  "searchForProductsPlaceholder": "Podaj wszelkie dane o swoim produkcie, aby go znaleźć",
-  "searchForProductsInputDesc": "Możesz przeprowadzić wyszukiwanie swoich produktów na podstawie tytułu, opisu lub linka.",
-  "priceFromLabel": "Cena od",
-  "priceFromPlaceholder": "Minimalna cena",
-  "priceFromInputDesc": "Minimalna cena w zakresie wyszukiwanych produktów.",
-  "priceFromError": "Zła minimalna cena! Upewnij się, że nie jest to liczba ujemna.",
-  "priceToLabel": "Cena do",
-  "priceToPlaceholder": "Maksymalna cena",
-  "priceToInputDesc": "Maksymalna cena w asortymencie wyszukiwanych produktów.",
-  "priceToError": "Zła maksymalna cena! Upewnij się, że nie jest to liczba ujemna.",
-  "marketplaceSearchLabel": "Wyszukaj dowolne towary",
-  "marketplaceSearchPlaceholder": "Podaj zapytanie dotyczące produktu",
-  "marketplaceSearchInputDesc": "Wyszukiwanie produktu będzie oparte na nazwie, kategorii, podkategorii, opisie, tytule i linku.",
-  "searchTitle": "Wyszukaj",
-  "searchForProductsHeader": "Szukaj produktów...",
-  "favoriteProductsSearchLabel": "Wyszukiwanie ulubionych produktów",
-  "favoriteProductsSearchPlaceholder": "Wyszukiwanie ulubionych produktów",
-  "favoriteProductsSearchInputDesc": "Możesz wyszukiwać swoje produkty na podstawie tytułu, opisu lub linka.",
-  "clickToCopy": "Kliknij pole wprowadzania, aby skopiować.",
-  "companyMemberSearchEmailLabel":"E-mail członka firmy",
-  "companyMemberSearchEmailPlaceholder": "Szukaj członków Twojej firmy",
-  "noHomeAddress": "Nie podano adresu domowego",
-  "noHomePhone": "Nie określono telefonu domowego",
-  "companyMemberSearchLabel": "Wyszukiwanie członków firmy",
-  "companyMemberSearchPlaceholder": "Szukaj członka firmy",
-  "companyMemberSearchInputDesc": "Szukaj członków firmy używając imienia i nazwiska",
-  "companyEmployeeLabel": "Pracownik firmy",
-  "companyEmployeePlaceholder": "Szukaj pracownika firmy",
-  "companyEmployeeInputDesc": "Wyszukaj pracownika firmy na podstawie adresu e-mail, imienia lub nazwiska"
+  "articleQueryLabel": "Zapytanie o artykuł",
+  "articleQueryPlaceholder": "Podaj zapytanie dotyczące artykułu do wyszukania",
+  "articleQueryDesc": "Artykuły zostaną znalezione na podstawie ich nazw, opisu i slugów",
+  "articleNameLabel": "Nazwa artykułu",
+  "articleNamePlaceholder": "Podaj nazwę artykułu",
+  "articleNameDesc": "Nazwa artykułu będzie głównym tytułem widzianym przez użytkowników, ta nazwa będzie również używana w ślimaku",
+  "articleDescLabel": "Opis artykułu",
+  "articleDescPlaceholder": "Podaj opis artykułu",
+  "articleDescDesc": "Opis będzie stanowić krótkie wprowadzenie do artykułu",
+  "articleTagsLabel": "Tagi artykułu",
+  "articleTagsPlaceholder": "Podaj tagi artykułu",
+  "articleTagsDesc": "Użyj spacji, aby wypchnąć tag na listę tagów artykułów",
+  "htmlEditorPlaceholder": "Twórz...",
+  "categoryNameLabel": "Nazwa kategorii",
+  "categoryNamePlaceholder": "Podaj nazwę nowej kategorii",
+  "categoryNameDesc": "Nazwa kategorii zostanie przypisana do artykułów i będzie widoczna dla wszystkich użytkowników końcowych",
+  "categoryDescLabel": "Opis kategorii",
+  "categoryDescPlaceholder": "Podaj opis nowej kategorii",
+  "categoryDescDesc": "Opis kategorii jest używany tylko wewnętrznie i będzie widoczny tylko dla użytkowników wewnętrznych",
+  "editCategoryNameLabel": "Edytuj nazwę kategorii",
+  "editCategoryNamePlaceholder": "Podaj nową nazwę kategorii",
+  "editCategoryDescLabel": "Edytuj opis kategorii",
+  "editCategoryDescPlaceholder": "Podaj nowy opis kategorii"
 }
