--- a/src/assets/i18n/components/input/ru.json
+++ b/src/assets/i18n/components/input/ru.json
@@ -46,18 +46,6 @@
   "phoneInputDescription": "Убедитесь, что вы указали номер телефона с кодом страны. Получив сообщение на свой телефон, введите 6-значный код в поле ввода ниже.",
   "resetPassInputDesc": "Ссылка для подтверждения будет отправлена на указанный адрес электронной почты, если учетная запись с таким адресом электронной почты существует. Ссылка будет действительна в течение 24 часов, убедитесь, что вы сбросили пароль в течение этого периода времени.",
   "fieldRequired": "Поле обязательно для продолжения",
-  "companyLocation": "Местонахождение компании",
-  "provideCompanyLocation": "Указать местоположение компании",
-  "companyLocationDesc": "Укажите физический (если возможно) адрес компании. В противном случае укажите адрес, по которому зарегистрирована компания.",
-  "locationError": "Минимальная длина локации – 8 символов, максимальная – 128 символов.",
-  "companyName": "Название компании",
-  "provideCompanyName": "Укажите название компании",
-  "companyDesc": "Укажите полное и действительное официальное название компании",
-  "companyError": "Минимальная длина названия компании — 2 символа, максимальная — 64 символа.",
-  "companyWebsite": "Веб-сайт компании",
-  "provideCompanyWebsite": "Предоставить сайт компании",
-  "websiteDesc": "Должно быть FQDN. Укажите URL-адрес веб-сайта, связанного с компанией.",
-  "wrongFQDN": "Неверное полное доменное имя (URL)",
   "emailChangeInfo": "Электронную почту можно изменить в настройках безопасности. Будьте осторожны! Вы можете изменить электронную почту только один раз.",
   "mfaToken": "Токен MFA",
   "copied": "Сообщение успешно скопировано в буфер обмена",
@@ -72,101 +60,27 @@
   "accDeletionFullName": "Чтобы удалить учетную запись, укажите свое полное имя (имя и фамилию)",
   "goToPageLabel": "Перейти на страницу",
   "pagePlaceholder": "Страница",
-  "newCompanyOwnerEmailLabel": "Электронная почта нового владельца компании",
-  "newCompanyOwnerEmailPlaceholder": "Укажите адрес электронной почты нового владельца компании",
-  "newCompanyOwnerEmailDesc": "Чтобы продолжить, убедитесь, что указанный адрес электронной почты принадлежит члену компании с подтвержденной учетной записью",
-  "companyMemberFirstName": "Имя участника компании",
-  "companyMemberLastName": "Фамилия члена компании",
-  "companyMemberNamePronunciation": "Произношение имени члена компании",
-  "companyMemberHomeAddress": "Домашний адрес участника компании",
-  "companyMemberHomePhone": "Телефон члена компании",
-  "companyMemberEmailModifyDesc": "Вы не можете изменить адрес электронной почты пользователя. Это действие должно быть выполнено самим пользователем.",
-  "provideCompanyMemberFirstName": "Укажите имя члена компании",
-  "provideCompanyMemberLastName": "Укажите фамилию члена компании",
-  "provideCompanyMemberNamePronunciation": "Укажите произношение имени члена компании (Zoe ('zo-ee'))",
-  "provideCompanyMemberHomeAddress": "Укажите домашний адрес участника компании",
-  "provideCompanyMemberHomePhone": "Укажите домашний телефон сотрудника компании",
-  "companyMemberNamePronunciationDesc": "Поле является необязательным. Это может быть фонетическое произношение или пример того, как звучит имя.",
-  "companyMemberHomeAddressDesc": "Поле является необязательным. Вы можете указать здесь свой домашний адрес, по которому в настоящее время находится член компании.",
-  "companyMemberHomePhoneDesc": "Поле является необязательным. Вы можете указать домашний номер телефона сотрудника компании.",
-  "newRoleName": "Новое имя роли",
-  "provideNewRoleName": "Укажите имя новой роли",
-  "provideNewRoleNameDesc": "Укажите имя роли, которое будет отображаться на экране.",
-  "newRoleNameError": "Минимальная длина имени новой роли — 2 символа, максимальная — 64 символа.",
-  "newRoleDescription": "Новое описание роли",
-  "provideNewRoleDescription": "Предоставьте описание новой роли",
-  "provideNewRoleDescriptionDesc": "Описание роли необходимо вам, чтобы знать, для чего создана эта роль и кому следует ее назначить.",
-  "newRoleDescriptionError": "Минимальная длина описания новой роли — 2 символа, максимальная — 128 символов.",
-  "roleName": "Имя роли",
-  "provideRoleName": "Укажите имя роли",
-  "provideRoleNameDesc": "Укажите имя роли, которое будет отображаться на экране.",
-  "roleNameError": "Минимальная длина имени новой роли — 2 символа, максимальная — 64 символа.",
-  "roleDescription": "Описание роли",
-  "provideRoleDescription": "Предоставьте описание роли",
-  "provideRoleDescriptionDesc": "Описание роли необходимо вам для того, чтобы знать, для чего эта роль создана и кого следует назначить.",
-  "roleDescriptionError": "Минимальная длина описания новой роли — 2 символа, максимальная — 128 символов.",
-  "newRoleAssignee": "Новый исполнитель роли",
-  "provideNewRoleAssignee": "Укажите правопреемника для новой роли",
-  "newRoleAssigneeDesc": "Чтобы создать новую роль, вам необходимо назначить ее хотя бы одному пользователю в вашей компании.",
-  "contactEmail": "Ваш контактный адрес электронной почты",
-  "provideContactEmail": "Укажите свой контактный адрес электронной почты",
-  "contactEmailDesc": "Укажите адрес электронной почты, который мы можем использовать, чтобы связаться с вами",
-  "contactMessage": "Ваше контактное сообщение",
-  "provideContactMessage": "Укажите ваш контактное сообщение",
-  "contactMessageDesc": "Пишите все, что хотите. Мы будем рады пообщаться!",
-  "wrongContactMessage": "Неверная длина контактного сообщения. Должно быть от 2 до 1024.",
-  "productLabel": "Название продукта",
-  "productPlaceholder": "Например: Новый модный Ford Mustang",
-  "productInputDesc": "Это будет основное название продукта, которое увидят все.",
-  "productError": "Длина названия должна быть от 16 до 70.",
-  "productDescriptionTitle": "Описание продукта",
-  "productDescriptionPlaceholder": "Напишите здесь пару слов важной информации, которая была бы полезна тому, кто собирается приобрести ваш продукт.",
-  "productDescriptionInputDesc": "Должно быть не менее 40 символов.",
-  "productDescriptionError": "Длина описания продукта должна составлять от 40 до 9000 символов.",
-  "contactPersonLabel": "Контактное лицо",
-  "contactPersonPlaceholder": "Укажите имя контактного лица",
-  "contactPersonInputDesc": "В случае, если с вами свяжутся по поводу предлагаемого вами продукта, сообщите людям, как они могут связаться с вами.",
-  "contactPersonError": "Продолжительность имя контактного лица должно быть в диапазоне от 1 до 64.",
-  "productContactEmailInputDesc": "Ваш адрес электронной почты может быть использован для связи с вами.",
-  "productPhonePlaceholder": "Номер контактного телефона владельца продукта",
-  "productPhoneInputDesc": "Ваш контактный номер телефона может потребоваться потенциальному клиенту, чтобы связаться с вами.",
-  "productPhoneError": "Неправильный формат номера телефона",
-  "productPriceLabel": "Цена продукта",
-  "productPricePlaceholder": "Укажите цену продукта",
-  "productPriceInputDesc": "Это будет сумма, которую вы хотите получить за свой продукт. Не забудьте выбрать правильную валюту!",
-  "productPriceError": "Цена не может быть отрицательным числом",
-  "productLocationLabel": "Местоположение продукта",
-  "productLocationPlaceholder": "Укажите местоположение продукта",
-  "productLocationInputDesc": "Укажите местоположение продукта или услуги, которые вы собираетесь опубликовать.",
-  "productLocationError": "Длина местоположения продукта должна составлять от 4 до 64",
-  "searchForYourProductsLabel": "Поиск ваших продуктов",
-  "searchForProductsPlaceholder": "Укажите любые данные о вашем продукте, чтобы найти его",
-  "searchForProductsInputDesc": "Вы можете выполнить поиск ваших продуктов по названию, описанию или ссылке",
-  "priceFromLabel": "Цена от",
-  "priceFromPlaceholder": "Минимальная цена",
-  "priceFromInputDesc": "Минимальная цена в ассортименте искомых товаров.",
-  "priceFromError": "Неправильная минимальная цена! Убедитесь, что это не отрицательное число.",
-  "priceToLabel": "Цена до",
-  "priceToPlaceholder": "Максимальная цена",
-  "priceToInputDesc": "Максимальная цена в ассортименте искомых товаров.",
-  "priceToError": "Неправильная максимальная цена! Убедитесь, что это не отрицательное число.",
-  "marketplaceSearchLabel": "Ищите любые товары, которые вы хотите",
-  "marketplaceSearchPlaceholder": "Введите запрос для продукта",
-  "marketplaceSearchInputDesc": "Поиск продукта будет основан на названии, категории, подкатегории, описании, заголовке и ссылки",
-  "searchTitle": "Поиск",
-  "searchForProductsHeader": "Поиск продуктов...",
-  "favoriteProductsSearchLabel": "Поиск по избранным продуктам",
-  "favoriteProductsSearchPlaceholder": "Поиск по избранным продуктам",
-  "favoriteProductsSearchInputDesc": "Вы можете выполнять поиск своих продуктов на основе названия, описания или ссылки.",
-  "clickToCopy": "Нажмите на поле ввода для копирования.",
-  "companyMemberSearchEmailLabel": "Электронная почта участника компании",
-  "companyMemberSearchEmailPlaceholder": "Поиск сотрудников вашей компании",
-  "noHomeAddress": "Домашний адрес не указан",
-  "noHomePhone": "Домашний телефон не указан",
-  "companyMemberSearchLabel": "Поиск участников компании",
-  "companyMemberSearchPlaceholder": "Поиск участников компании",
-  "companyMemberSearchInputDesc": "Поиск участников компании по имени и фамилии",
-  "companyEmployeeLabel": "Сотрудник компании",
-  "companyEmployeePlaceholder": "Поиск сотрудника компании",
-  "companyEmployeeInputDesc": "Поиск сотрудника компании по электронной почте, имени или фамилии."
+  "articleQueryLabel": "Запрос статьи",
+  "articleQueryPlaceholder": "Укажите запрос статьи для поиска",
+  "articleQueryDesc": "Статьи будут найдены по их названию, описанию и слагам",
+  "articleNameLabel": "Название статьи",
+  "articleNamePlaceholder": "Укажите название статьи",
+  "articleNameDesc": "Название статьи будет основным заголовком, который видят пользователи, а также это имя будет использоваться в слаге",
+  "articleDescLabel": "Описание статьи",
+  "articleDescPlaceholder": "Предоставьте описание статьи",
+  "articleDescDesc": "Описание будет использоваться в качестве краткого введения к статье",
+  "articleTagsLabel": "Теги статей",
+  "articleTagsPlaceholder": "Укажите теги статьи",
+  "articleTagsDesc": "Используйте пробел, чтобы переместить тег в список тегов статьи",
+  "htmlEditorPlaceholder": "Созидай...",
+  "categoryNameLabel": "Название категории",
+  "categoryNamePlaceholder": "Укажите название новой категории",
+  "categoryNameDesc": "Название категории будет присвоено статьям и видно всем конечным пользователям",
+  "categoryDescLabel": "Описание категории",
+  "categoryDescPlaceholder": "Предоставьте описание новой категории",
+  "categoryDescDesc": "Описание категории используется только для внутренних целей и будет видно только внутренним пользователям",
+  "editCategoryNameLabel": "Изменить название категории",
+  "editCategoryNamePlaceholder": "Укажите новое имя для категории",
+  "editCategoryDescLabel": "Изменить описание категории",
+  "editCategoryDescPlaceholder": "Укажите новое описание категории"
 }
