--- a/src/assets/i18n/components/button/pl.json
+++ b/src/assets/i18n/components/button/pl.json
@@ -32,23 +32,23 @@
   "deleteRole": "Usuń rolę",
   "seeMore": "Zobacz więcej",
   "sendContactMessage": "Wyślij wiadomość kontaktową",
-  "postProduct": "Opublikuj produkt",
-  "editProduct": "Edytuj produkt",
-  "deleteProduct": "Usuń produkt",
   "clearFilters": "Wyczyść filtry",
   "goToMarketplace": "Marketplace",
   "dashboardMainPage": "Strona główna",
   "dashboardRedirect": "Dashboard",
-  "postProductRedirect": "Opublikuj produkt",
   "settingsRedirect": "Ustawienia konta",
   "showFilters": "Pokaż filtry",
   "createAccForMyself": "Chcę założyć konto dla siebie",
   "createAccForCompany": "Chcę utworzyć konto dla mojej firmy",
-  "dashboardFavorites": "Ulubione produkty",
   "showContactEmail": "Pokaż kontaktowy adres e-mail",
   "showContactPhone": "Pokaż telefon kontaktowy",
   "logInCreateAcc": "Zaloguj się / Załóż konto",
   "companySettings": "Ustawienia firmy",
   "goToUserProfile": "Profil użytkownika",
-  "companyProduct": "Produkty firmowe"
+  "yourArticles": "Twoje artykuły",
+  "selectPhoto": "Wybierz zdjęcie",
+  "createArticle": "Utwórz artykuł",
+  "createCategory": "Utwórz kategorię",
+  "editCategory": "Edytuj kategorię",
+  "deleteCategory": "Usuń kategorię"
 }
