--- a/src/assets/i18n/pages/categories/en.json
+++ b/src/assets/i18n/pages/categories/en.json
@@ -3,5 +3,6 @@
   "listAllCategories": "List of all categories",
   "noCategories": "There are no any categories...",
   "categoryCreatedAt": "Created at: {{ createdAt }}",
-  "categoryUpdatedAt": "Updated at: {{ updatedAt }}"
+  "categoryUpdatedAt": "Updated at: {{ updatedAt }}",
+  "categoryLanguage": "Category language: {{ lang }}"
 }
