--- a/src/assets/i18n/pages/categories/pl.json
+++ b/src/assets/i18n/pages/categories/pl.json
@@ -3,5 +3,6 @@
   "listAllCategories": "Lista wszystkich kategorii",
   "noCategories": "Nie ma żadnych kategorii...",
   "categoryCreatedAt": "Utworzono o: {{ createdAt }}",
-  "categoryUpdatedAt": "Aktualizacja o: {{ updatedAt }}"
+  "categoryUpdatedAt": "Aktualizacja o: {{ updatedAt }}",
+  "categoryLanguage": "Język kategorii: {{ lang }}"
 }
