--- a/src/assets/i18n/pages/categories/ru.json
+++ b/src/assets/i18n/pages/categories/ru.json
@@ -3,5 +3,6 @@
   "listAllCategories": "Список всех категорий",
   "noCategories": "Нет категорий...",
   "categoryCreatedAt": "Создано: {{ createdAt }}",
-  "categoryUpdatedAt": "Обновлено: {{ updatedAt }}"
+  "categoryUpdatedAt": "Обновлено: {{ updatedAt }}",
+  "categoryLanguage": "Язык категории: {{ lang }}"
 }
